[metadata]
name = openstack-tests-list
summary = Tool to manage Tempest test skiplists and allowlists
author = Soniya Vyas
author_email = svyas@redhat.com
home_page = https://github.com/openstack-k8s-operators/openstack-tests-list
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12

[files]
packages =
    openstack_tests_list
data_files =
    usr/local/share/ansible/roles/install_skiplist = roles/install_skiplist/*
    usr/local/share/ansible/roles/validate_yaml = roles/validate_yaml/*
    usr/local/share/ansible/roles/list_skipped = roles/list_skipped/*
    usr/local/share/ansible/roles/list_allowed = roles/list_allowed*
    usr/local/share/ansible/roles/validate-tempest = roles/validate-tempest/*
    usr/local/share/openstack-operator = openstack-operator/*

[options]
packages = find:
install_requires =
    pyyaml
    click
    inquirer
    ruamel.yaml>=0.17.7
    tempest
    validators
    voluptuous

[entry_points]
console_scripts =
    openstack-tests-list = openstack_tests_list.main:main
openstack_tests_list.cm =
    validate = openstack_tests_list.validate:Validate
    list = openstack_tests_list.list_yaml:ListSkippedYaml
    list-skipped = openstack_tests_list.list_yaml:ListSkippedYaml
    addtest = openstack_tests_list.add_test:AddTest
    list-allowed = openstack_tests_list.list_allowed:ListAllowedYaml

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html

[build_releasenotes]
all_files = 1
build-dir = releasenotes/build
source-dir = releasenotes/source
